--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
+  },
+  "dependencies": {
+    "color-name-list": "^9.21.0"
   }
 }
