--- a/package.json
+++ b/package.json
@@ -1,34 +1,37 @@
 {
-  "name": "todo-list",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "watch": "webpack --watch",
-    "start": "webpack serve --open"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/whitesgr03/Todo-List.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/whitesgr03/Todo-List/issues"
-  },
-  "homepage": "https://github.com/whitesgr03/Todo-List#readme",
-  "devDependencies": {
-    "css-loader": "^6.7.1",
-    "html-webpack-plugin": "^5.5.0",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1"
-  },
-  "dependencies": {
-    "color-name-list": "^9.21.0",
-    "date-fns": "^2.29.3"
-  }
+    "name": "todo-list",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "webpack",
+        "watch": "webpack --watch",
+        "start": "webpack serve --open"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/whitesgr03/Todo-List.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/whitesgr03/Todo-List/issues"
+    },
+    "homepage": "https://github.com/whitesgr03/Todo-List#readme",
+    "devDependencies": {
+        "css-loader": "^6.7.1",
+        "eslint": "^8.28.0",
+        "eslint-config-prettier": "^8.5.0",
+        "html-webpack-plugin": "^5.5.0",
+        "prettier": "2.8.0",
+        "style-loader": "^3.3.1",
+        "webpack": "^5.74.0",
+        "webpack-cli": "^4.10.0",
+        "webpack-dev-server": "^4.11.1"
+    },
+    "dependencies": {
+        "color-name-list": "^9.21.0",
+        "date-fns": "^2.29.3"
+    }
 }
